<?xml version="1.0"?>
<package format="3">
  <name>ugv_control</name>
  <version>0.1.0</version>
  <description>UGV controller with low-level and motion control abstraction.</description>

  <maintainer email="kendall@digitalmindrobotics.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
